--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
-    "preline": "^2.0.3"
+    "@preline/scrollspy": "^2.0.2",
+    "preline": "^2.0.3",
+    "tw-elements": "^2.0.0"
   }
 }
